@@ -73,6 +73,12 @@ problems on some systems. [Paul Orrock]
 Fixed problem with Bric::SOAP so that the first field or container is correctly
 numbered at 0 rather than 2. [Paul Orrock]
 
+=item *
+
+Fix for bug 1376 && 1394, where a story imported through bric_soap didn't have
+it's object_order set properly so wouldn't preview through templates until
+saved in the UI. [Paul Orrock]
+
 =back
 
 =head1 VERSION 1.11.1 (2008-10-03)
